# coderwabbit-2

./: .coverage  .eslintignore  .eslintrc.json  Dockerfile  README.md  docker-compose.yml  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  setup_env.sh  test_bandit_demo.py  test_coverage_demo.py  test_hypothesis.py
.hypothesis/constants/: c138a4ecd7ed7058
repo-python-test/: main.py  mypy_test.py  pylint_test.py  requirements.txt  vulture_test.py
repo-python-test/dependency_safety/: pyproject.toml  requirements.txt
src/app/: Home.module.css  globals.css  layout.tsx  page.tsx
src/app/dashboard/: Dashboard.module.css  page.tsx
src/app/integrations/: Integrations.module.css  page.tsx
src/app/learning/: Learning.module.css  page.tsx
src/app/projects/: Results.module.css  page.tsx
src/app/reports/: Reports.module.css  page.tsx
src/app/repositories/: Repositories.module.css  page.tsx
src/app/settings/: Settings.module.css  page.tsx
src/app/subscription/: Subscription.module.css  page.tsx
src/components/: AnalysisResults.tsx  AppNavbar.module.css  AppNavbar.tsx  Navbar.module.css  Navbar.tsx  RepoSearch.module.css  RepoSearch.tsx  RepoSelector.module.css  RepoSelector.tsx  RepoStatus.module.css  RepoStatus.tsx  Sidebar.module.css  Sidebar.tsx
src/constants/: messages.ts
src/hooks/: useRepoSelection.ts
src/lib/: authOptions.ts
src/types/: analyze.d.ts  analyze.schema.ts  next-auth.d.ts  resultsTypes.ts
src/utils/: error.ts  fetchWithAuth.ts  parseSecrets.ts  safeExec.ts
(+56 files in other folders)
