
[tool.poetry]
name = "vulnerable-demo"
version = "0.1.0"
description = "Demo project with vulnerable dependencies for pip-audit testing"
authors = ["CoderWabbit <test@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
flask = "0.5"
django = "1.2"
cryptography = "2.1.4"
urllib3 = "1.25.2"
jinja2 = "2.7.2"
insecure-package = "0.1.0"
